--- a/personalblogsite/pages.css
+++ b/personalblogsite/pages.css
@@ -1,6 +1,20 @@
+.blogbody {
+  display: flex;
+  flex-direction: column;
+}
+
+.blogtitleblock {
+  border: solid 1px black;
+  align-self: center;
+  justify-content: space-between;
+  height: 30vh;
+  width: 100vw;
+}
+
 .blogh1 {
   margin: 1vh;
   padding: 3vh 3vh 0 3vh;
+  font-weight: 500;
 }
 
 .home {
@@ -49,6 +63,11 @@
   line-height: 1.5;
   max-width: 700px;
   text-align: left;
+}
+
+.bloglist {
+  list-style: disc;
+  margin-left: 30px;
 }
 
 .blogend {
@@ -107,4 +126,18 @@
 .aboutmedescription {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.aboutmelink {
+  color: rgb(26, 152, 217)
+}
+
+.blogfooter {
+  display: flex;
+  height: 5vh;
+  width: 100vw;
+  margin: 10px;
+  padding: 3vh;
+  border-top: solid 1px black;
+  border-bottom: solid 1px black;
 }
