--- a/personalblogsite/main.css
+++ b/personalblogsite/main.css
@@ -1,8 +1,12 @@
 body {
   font-family: 'Catamaran', sans-serif;
-  height: 100vh;
   letter-spacing: 0.1rem;
   font-weight: 300;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
@@ -24,6 +28,7 @@ a {
   justify-content: space-between;
   height: 25vh;
   width: 100vw;
+  order: 0;
 }
 
 h1 {
@@ -72,6 +77,7 @@ h4 {
   background: white;
   border-radius: 5px;
   opacity: 0.5;
+  border: solid 1px black;
 }
 
 .navlink {
@@ -87,6 +93,7 @@ h4 {
 .mainindex {
   display: flex;
   justify-content: space-around;
+  flex: 1;
 }
 
 .sectionindex {
@@ -126,10 +133,9 @@ time {
 
 footer {
   display: flex;
+  align-self: flex-end;
   height: 5vh;
-  width: 100vw;
-  margin: 10px;
-  padding: 1vh;
+  order: 2;
   border-top: solid 1px black;
   border-bottom: solid 1px black;
 }
@@ -140,7 +146,7 @@ footer {
   width: 67vw;
   align-items: center;
   align-self: center;
-  margin-right: 3vh;
+  margin-right: 5vw;
 }
 
 .footernav {
@@ -162,9 +168,9 @@ footer {
 .copyright {
   display: flex;
   width: 33vw;
-  margin-left: 3vw;
 }
 
 small {
   align-self: center;
+  margin-left: 10vw;
 }
