--- a/personalblogsite/pages.css
+++ b/personalblogsite/pages.css
@@ -1,6 +1,7 @@
 .blogbody {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .blogtitleblock {
@@ -29,6 +30,7 @@
   padding: 5vw;
   align-self: center;
   flex-direction: column;
+  flex: 1;
 }
 
 .blogpagesection {
@@ -99,6 +101,7 @@
 
 .aboutme {
   display: flex;
+  flex: 1;
   justify-content: space-around;
 }
 
@@ -136,8 +139,8 @@
   display: flex;
   height: 5vh;
   width: 100vw;
-  margin: 10px;
-  padding: 3vh;
+  /*margin: 10px;
+  padding: 3vh;*/
   border-top: solid 1px black;
   border-bottom: solid 1px black;
 }
